<resources>
    <string name="title_schedule" translation_description="The title for the schedule screen where user can see their schedule for the Android Dev Summit.">Schedule</string>
    <string name="title_info" translation_description="The title for the info screen where user can see various information, such as FAQ and travel info.">Info</string>
    <string name="title_agenda" translation_description="The title for the agenda screen where user can see all the sessions they plan to attend.">Agenda</string>
    <string name="filters" translation_description="The label for the button to filter sessions by their topics, room, and so on.">Filters</string>
    <string name="category_heading_tracks" translation_description="Label in the filters panel above session topics (Android, Cloud, etc.)">Topics</string>
    <string name="category_heading_types" translation_description="Label in the filters panel above event types (Sessions, Codelabs, etc.)">Types</string>
    <string name="clear_all" translation_description="The label for the button to clear all the filter conditions.">Clear all</string>
    <string name="reset" translation_description="The label for the button to reset the filter conditions.">Reset</string>
    <string name="pinned_events_filter_description" translation_description="Message shown when the user toggles the switch to see their pinned events.">Showing only starred events</string>
    <plurals name="filter_event_count" translation_description="A label showing how many events match the current filters">
        <item quantity="one">%1$d Event</item>
        <item quantity="other">%1$d Events</item>
    </plurals>
    <string name="starred_events">Your starred events</string>
    <string name="starred_events_short">Starred</string>
    <string name="search_schedule_hint" translation_description="Text field hint that is shown when user has not entered a search query">Search the schedule</string>
    <string name="search_schedule_no_results" translation_description="Text that is shown if there are no search results">No results found</string>
    <string name="session_duration_location" translatable="false">%1s / %2s</string>
    <string name="session_date_duration_location" translatable="false">%1s / %2s / %3s</string>
    <string name="agenda_duration" translatable="false">%1$s – %2$s</string>
    <string name="event_starred" translation_description="The message shown when user adds an event to their schedule.">Event added to your starred items</string>
    <string name="event_unstarred" translation_description="The message shown when user removes an event from their schedule.">Event removed from starred items</string>
    <string name="event_star_error" translation_description="The message shown for an error when user tries to add an event.">Error adding event to starred items</string>
    <string name="reservation_error" translation_description="The message shown for an error when user is trying to reserve a session attendance.">Error making changes to reservation. Wait for previous requests to finish or try again later.</string>
    <string name="reservation_request_succeeded" translation_description="The message shown when user tries to reserve a seat for a session.">Reservation requested.</string>
    <string name="reservation_cancel_succeeded" translation_description="The message shown when user has canceled their reservation for a session.">Reservation canceled: \"&lt;b>%s&lt;/b>.\"</string>
    <string name="reservation_new" translation_description="The message shown when user's reservation is confirmed by the system.">Your seat has been reserved for \"&lt;b>%s&lt;/b>\".</string>
    <string name="reservation_replaced" translation_description="The message shown when user has chosen to replace a reservation for another and it is confirmed by the system.">Event replaced.</string>
    <string name="waitlist_new" translation_description="The message shown when user is added to the waitlist of a session reservation.">You have been waitlisted.</string>
    <string name="waitlist_cancel_succeeded" translation_description="The message shown when user has canceled their reservation and was waitlisted for a session.">Removed from waitlist.</string>
    <string name="got_it" translation_description="The label for dismissing a information messages.">Got it</string>
    <string name="dont_show" translation_description="The label for opting out of in-app notification messages.">Don\'t show</string>
    <string name="reservation_denied_cutoff" translation_description="The message shown when user's reservation is denied because the session starts too soon">Reservation denied: too close to start time.</string>
    <string name="reservation_denied_clash" translation_description="The message shown when user's reservation is denied because they have reserved another event at that time">Reservation denied: clash with another reservation</string>
    <string name="reservation_denied_unknown" translation_description="The message shown when user's reservation is denied because of an unknown error">Reservation denied: unknown error.</string>
    <string name="cancellation_denied_cutoff" translation_description="The message shown when user is trying to cancel a reservation but it's denied because the session starts too soon">Cancellation denied: too close to start time.</string>
    <string name="onboarding_get_started" translation_description="The label for the button to start using the app.">Get started</string>
    <string name="onboarding_welcome_to_conference" translation_description="The welcome message shown at the onboarding screen of the app."> Welcome \nto International Workshop on \'Capacity building and Education Outreach in Advanced Geospatial Technologies and Land Management\’
</string>
    <string name="onboarding_date_location" translation_description="The date and the place of Android Dev Summit 2019.">December 10–11, 2019\nLand Management Training Center, Dhulikhel, NP</string>
    <string name="wifi_network_label" translation_description="Label for wifi network name.">Wifi network:</string>
    <string name="wifi_password_label" translation_description="Label for wifi network password">Password:</string>
    <string name="event_afterhours_title" translation_description="Header label for general information on &quot;after hours&quot;">After Hours</string>
    <string name="event_meals_title" translation_description="Header label for general information on &quot;meals&quot;">Meals</string>
    <string name="bike_title" translation_description="Header label for general information on &quot;Bike parking&quot;">Bike parking</string>
    <string name="parking_title" translation_description="Header label for general information on &quot;Parking&quot;">Car parking</string>
    <string name="faq_meals_title" translation_description="Header label for general information on &quot;Meals&quot;">Meals</string>
    <string name="event_meals_description" translation_description="General information on meals.">Attendees are offered complimentary breakfast, lunch, and snacks on the days of the conference.</string>
    <string name="faq_meals_description">Attendees are offered complimentary breakfast, lunch, and snacks each day of the event.</string>
    <string name="wifi_header" translation_description="Header label for wifi information.">Wifi</string>
    <string name="event_types_header" translation_description="Header label for information on the different event types.">Event Types</string>
    <string name="lmtc_parking_description">Free parking will be available to attendees. Please park in LMTC premise</string>
    <string name="lmtc_after_hours_description"> All registered attendees are invited to the welcome reception in the evening  </string>
    <string name="lmtc_how_to_get_there_title"> How to get to the venue? </string>
    <string name="lmtc_how_to_get_there_description">
        There will be free bus services from Ratnapark to Workshop Venue Dhulikhel to Workshop Venue
        \nIf you are coming from International Airport, you can get taxi to come to Workshop Venue (LMTC, 28 kilo, Dhulikhel, Kavre);
        however the fare may range from Nepali Rupee 3000 to 4000.

        \n\nThere are local transportation too; from Airport to Koteshor (the bus charges Nepali Rupee 20) and from Koteshor to 28 Kilo, Dhulikhel (the bus charges Nepali Rupee 55).
        \n\nAlso, if you have provided the transportation details to the workshop team, transportation facilities can be made available from Workshop Team as well.
</string>
    <string name="lmtc_will_there_be_internet_title"> Will there be internet access?</string>
    <string name="lmtc_will_there_be_internet_description"> Yes, free wifi will be available in the workshop areas</string>
    <string name="lmtc_hotel_info_title">Will there be accommodation? </string>
    <string name="lmtc_hotel_info_description">
        <![CDATA[
<p>There are many hotels, including five stars in Dhulikhel. Considering the facilities available in budget price, following hotels are endorsed: </p>


<h3><a href="http://www.sarathihotel.com" target="_blank">Hotel Sarathi</a></h3>
<p>Dhulikhel, Kavrepalanchok, Nepal <br>
   Tel No: +977-011-490884, 490994<br>
   Email: info@sarathihotel.com<br>
   URL: <a href="http://www.sarathihotel.com" target="_blank">www.sarathihotel.com</a>
</p>
<h3><a href="http://www.himalayanhorizon.com" target="_blank">Hotel Himalayan Horizon </a></h3>
<p>Dhulikhel, Kavrepalanchok, Nepal <br>
   Tel No: +977- 014225092, 4247183<br>
   Email: horizondhulikhel@yahoo.com<br>
   URL: <a href="http://www.himalayanhorizon.com" target="_blank">www.himalayanhorizon.com</a>
</p>
</div>
<h3><a href="http://dhulikhellodgeresort.com/" target="_blank">Dhulikhel Lodge Resort </a></h3>
<p>Dhulikhel, Kavrepalanchok, Nepal <br>
   Tel No: +977- 014225092, 4247183<br>
   Email: dlrdhuli@gmail.com<br>
   URL: <a href="http://www.dhulikhellodgeresort.com" target="_blank">www.dhulikhellodgeresort.com/</a>
</p>


         ]]>
    </string>
    <string name="lmtc_tour_title">Social Tour</string>
    <string name="lmtc_tour_description">
           <![CDATA[
           <h3>Bhaktapur-Pashupati-Baudhha City Tour</h3>

<ul>
  <li>Per Person  (Group of 14 People) : Rs. 4700/-</li>
  <li>Per Person (Group of 7 People) :  Rs.6000/-</li>
</ul>

<h3>Dhulikhel-Namobuddha Site Seeing</h3>

<ul>
  <li>Per Person  (Group of 14 People) : Rs. 2500/-</li>
  <li>Per Person (Group of 7 People) :  Rs.3800/-</li>
</ul>

<h3>Special Local Attractions </h3>
      <ol>
        <li>
        <a href="http://world-wideadventure.com"> Zeap Line Dhulikhel</a>
        </li>
        <li>
          Bungy Jumping- Bhotekoshi-<a href="http://www.thelastresort.com.np"> The Last Resort  </a>      </li>

      </ol>
<small class="text-danger">** Workshop registration does not include the social tour and special Local Attraction charges.</small>


     ]]>
    </string>
    <string name="event_technical_session_title">Technical Session</string>
    <string name="event_technical_session_description">Coming Soon</string>
    <string name="event_bim_session_title">Bim Session</string>
    <string name="event_bim_session_description">Coming Soon</string>
    <string name="event_site_map_header">OPEN SITE MAP</string>
    <string name="event_review_title">Event Review Form</string>
    <string name="ltmc_feedback_form_description">Thank you for participating in the International Workshop Nepal 2019 happened on December 10–11, 2019 on Land Management Training Center, Dhulikhel, Nepal.\n\nPlease fill this quick survey and let us know your thoughts to improve our management, logistics and content in the future events (your answers will be anonymous).</string>
    <string name="lmtc_feedback_form_title">International Workshop\nNepal 2019 feedback form</string>
</resources>