<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.google.samples.apps.iosched.ui.info.EventInfoViewModel" />
    </data>

    <com.google.samples.apps.iosched.widget.InsetDispatchingCoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/margin_normal" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/margin_normal" />

                <TextView

                    android:id="@+id/wifi_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/wifi_header"
                    android:textAppearance="@style/TextAppearance.IOSched.Subhead"
                    android:visibility="visible"
                    app:goneUnless="@{viewModel.showWifi}"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wifi_network_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/wifi_network_label"
                    android:textColor="?android:textColorPrimary"
                    android:visibility="visible"
                    app:goneUnless="@{viewModel.showWifi}"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/wifi_header" />

                <TextView
                    android:id="@+id/wifi_password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:text="@string/wifi_password_label"
                    android:textColor="?android:textColorPrimary"
                    android:visibility="visible"
                    app:goneUnless="@{viewModel.showWifi}"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/wifi_network_label" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/wifi_label_barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="wifi_network_label,wifi_password_label" />

                <TextView
                    android:id="@+id/wifi_network_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:text="@{viewModel.wifiSsid}"
                    android:textColor="?android:textColorPrimary"
                    android:visibility="visible"
                    app:goneUnless="@{viewModel.showWifi}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/wifi_network_label"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toEndOf="@+id/wifi_label_barrier"
                    tools:text="IO2018" />

                <TextView
                    android:id="@+id/wifi_password_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:background="@drawable/inset_borderless_btn"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/a11y_min_touch_target"
                    android:onClick="@{() -> viewModel.onWifiConnect()}"
                    android:text="@{viewModel.wifiPassword.concat(` ` + @string/tap_to_join_network)}"
                    android:textColor="?attr/colorSecondary"
                    android:visibility="visible"
                    app:goneUnless="@{viewModel.showWifi}"
                    app:layout_constraintBaseline_toBaselineOf="@id/wifi_password_label"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toEndOf="@id/wifi_label_barrier"
                    tools:text="whatislove" />

                <TextView
                    android:id="@+id/event_sitemap_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:onClick="@{() -> viewModel.onSiteMapOpen()}"
                    android:text="@string/event_site_map_header"
                    android:textAppearance="@style/TextAppearance.IOSched.Subhead"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/wifi_password_label" />


                <com.google.samples.apps.iosched.widget.CollapsibleCard
                    android:id="@+id/hotel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:cardDescription="@string/lmtc_hotel_info_description"
                    app:cardTitle="@string/lmtc_hotel_info_title"
                    app:layout_constraintTop_toBottomOf="@+id/event_sitemap_header" />

                <com.google.samples.apps.iosched.widget.CollapsibleCard
                    android:id="@+id/tour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:cardDescription="@string/lmtc_tour_description"
                    app:cardTitle="@string/lmtc_tour_title"
                    app:layout_constraintTop_toBottomOf="@+id/hotel" />

                <TextView
                    android:id="@+id/event_types_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/event_types_header"
                    android:textAppearance="@style/TextAppearance.IOSched.Subhead"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/tour" />

                <TextView
                    android:id="@+id/review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/event_review_title"
                    android:textAppearance="@style/TextAppearance.IOSched.Subhead"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/event_types_header" />

                <com.google.samples.apps.iosched.widget.EventView
                    android:id="@+id/event_sessions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    app:eventDescription="@string/ltmc_feedback_form_description"
                    app:eventTitle="@string/lmtc_feedback_form_title"
                    app:eventTypeLogo="@drawable/event_header_meals"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/review" />


                <com.google.samples.apps.iosched.widget.EventView
                    android:id="@+id/event_codelabs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:eventDescription="@string/event_technical_session_description"
                    app:eventTitle="@string/event_technical_session_title"
                    app:eventTypeLogo="@drawable/event_header_codelabs"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_sessions" />

                <com.google.samples.apps.iosched.widget.EventView
                    android:id="@+id/event_officehours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:eventDescription="@string/event_bim_session_description"
                    app:eventTitle="@string/event_bim_session_title"
                    app:eventTypeLogo="@drawable/event_header_office_hours"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_codelabs" />


                <com.google.samples.apps.iosched.widget.EventView
                    android:id="@+id/event_meals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:eventDescription="@string/event_meals_description"
                    app:eventTitle="@string/event_meals_title"
                    app:eventTypeLogo="@drawable/event_header_meals"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/event_officehours" />




            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </com.google.samples.apps.iosched.widget.InsetDispatchingCoordinatorLayout>

</layout>
