<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.google.samples.apps.iosched.ui.onboarding.OnboardingViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:fillViewport="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:layout_marginBottom="@dimen/onboarding_margins"

                android:id="@+id/get_started"
                style="@style/Widget.IOSched.RaisedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:onClick="@{() -> viewModel.getStartedClick()}"
                android:text="@string/onboarding_get_started"
                android:textColor="@color/white"
                app:backgroundTint="@color/lmtc_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

            <ImageView
                android:layout_marginTop="@dimen/onboarding_margins"
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="176dp"
                android:fitsSystemWindows="true"
                android:importantForAccessibility="no"
                android:padding="@dimen/onboarding_animation_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_np_gov"
                app:layout_constraintBottom_toTopOf="@id/welcome"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:layout_marginTop="@dimen/onboarding_margins"
                android:id="@+id/date_location"
                style="@style/Widget.IOSched.OnboardingDeck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_date_location"
                app:layout_constraintBottom_toTopOf="@+id/get_started"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/welcome" />

            <TextView
                android:layout_marginTop="@dimen/onboarding_margins"
                android:id="@+id/welcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_welcome_to_conference"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.IOSched.H1"
                app:layout_constraintBottom_toTopOf="@id/date_location"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/logo" />


            <com.google.samples.apps.iosched.widget.HtmlTextView
                android:layout_marginTop="@dimen/onboarding_margins"
                android:id="@+id/welcome_message"
                style="@style/Widget.IOSched.OnboardingDeck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toTopOf="@+id/get_started"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/date_location" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/onboarding_margins" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/onboarding_margins" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
